2014-11-17  Mitsutoshi NAKANO  <bkbin005@rinku.zaq.ne.jp>

	* egg.el: egg-version: change version string to "5.0.0.0".

2014-11-16  Mitsutoshi NAKANO  <bkbin005@rinku.zaq.ne.jp>
	* ChangeLog: rename to ChangeLog.2002-2004.
	* ChangeLog: create new file.
	* egg-cnv.el, its/kata.el: add copyright notice.
	  gniibe said that these files have wrong copyright information.
	  So added notice.
	  See also:
	  http://lists.debian.or.jp/debian-devel/201411/msg00034.html
	  http://sourceforge.jp/projects/tamago-tsunagi/lists/archive/misc/2014-Nov
	  https://anonscm.debian.org/git/pkg-anthy/egg.git/
	* egg.el: add egg-tsunagi-version.